# social-routing

./: .gitignore  Cargo.toml  README.md  config.yaml
src/: action.rs  catchers.rs  condition.rs  config.rs  errors.rs  main.rs  proxy.rs  routers.rs  server.rs
tests/configs/: 001_filter_path.yaml  002_filter_method.yaml  003_filter_header_condition.yaml  004_redirect_action.yaml
